2008-06-04  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Don't warn about overriden docs comment if its the same text.

2008-06-03  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Spelling.

	* gtkdoc-mkdb.in:
	  Warn and skip double file entries in section files.
	  
	* gtkdoc-mktmpl.in:
	  Use the new warning format in this script too.

	* gtkdoc-rebase.in:
	  Also use optional parameters here.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs-tmpl/tester-sections.txt:
	* tests/gobject/docs/tester-docs.xml:
	* tests/gobject/docs/tester-sections.txt:
	* tests/gobject/src/giface.c:
	* tests/gobject/src/gobject.c:
	* tests/gobject/src/gobject.h:
	  Add some since: tags for the tests too.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  tody up and add some comments regarding HTML_DIR.

	* gtkdoc-fixxref.in:
	  HTML_DIR is not neccesarily set.

	* gtkdoc-mkhtml.in:
	  Fix uninstalled.

	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs/tester-docs.xml:
	  Add more chapter id's and experiment with an index chapter.	  

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	  Improve spacing on indicies and glossaries.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* tests/bugs/docs/tester-docs.xml:
	* tests/gobject/docs/tester-docs.xml:
	* tests/gobject/docs/tester-sections.txt:
	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs-tmpl/tester-sections.txt:
	* tests/gobject/src/gobject.c:
	* tests/gobject/src/gobject.h:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Add some index lists to the tests. Add a deprecated function.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	patch by: Felix Riemann <friemann@svn.gnome.org>

	* gtk-doc.xsl:
	* style.css:
	  Produce valid html. Fixes #534627.

2008-05-23  Stefan Kost  <ensonic@users.sf.net>

	* configure.in:
	* tests/gobject/Makefile.am: